Reorganize project structure: clean layout with Application and HW2.1 folders